# generic-array

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  build.cmd
include/: generic_array.h
src/: generic_array.c
tests/: CMakeLists.txt  custom_array.c  custom_array.h  test.c
